<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BirthDroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_birthday">Add birthday</string>
    <string name="title_activity_edit_birthday">EditBirthdayActivity</string>
    <string name="person_name">Person name</string>
    <string name="person_email">Person email</string>
    <string name="person_birthday">Birthday</string>
    <string name="person_picture">Picture</string>
    <string name="delete_user">Do you really want to delete %1$s?</string>
    <string name="delete_user_ok">Delete poor guy</string>
    <string name="delete_user_cancel">Keep him</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="explanation_how_to_add_birthdays">Tap \"Add birthday\" button to add a birthday.</string>
    <string name="save_birthday">Save birthday</string>

</resources>